# advanced-cxx

./: .clang-format  .gitignore  CMakeLists.txt  Rakefile  Readme.md
.github/workflows/: ci.yml
include/: command.hpp  commit.hpp  constants.hpp  diff.hpp  log.hpp  patch.hpp  repository.hpp  revision.hpp  sub-process.hpp
include/commands/: checkout.hpp  commit.hpp  help.hpp  init.hpp  log.hpp  merge.hpp  show.hpp  status.hpp
lib/: command.cpp  command.hpp  commit.hpp  diff.hpp  init.hpp  shell.hpp  show.hpp
src/: command.cpp  lit.cpp
tests/: lit-test.sh  test.ps1  test.sh
